--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "monartportfolio",
+  "homepage": "https://monart.space/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
